<resources>
    <string name="app_name">DiveAtlas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_maps">Maps</string>
    <string name="title_divesite">Dive Sites</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="regUsername">Username</string>
    <string name="regPassword">Passsword</string>
    <string name="regEmail">Email</string>
    <string name="regFirstName">First Name</string>
    <string name="regLastName">Last Name</string>
    <string name="regDiverCertNo">Diving Certification Number (Optional)</string>
    <string name="regDiverCertLevel">Diving Certification Levels (Optional)</string>
    <string name="regDiverCertAgent">Diving Certification Agency (Optional)</string>
    <string name="regPhone">Phone Number (Optional)</string>
    <string name="notfoundtext">N/A</string>
    <string name="letsSighUp">Don\'t have account? <u>Let\'s sign up</u></string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="DescTitle"><u>Description:</u></string>
    <string name="search">Search</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
</resources>
