<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profilePageMainLayout"
    android:background="@color/colorPrimaryDark"
    tools:context=".ProfilePage"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tint="#FAFAFA"
            android:src="@mipmap/ic_launcher_foreground" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_logEmail"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FAFAFA"
                android:textColor="#FAFAFA"
                android:hint="@string/regEmail"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_logPassword"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FAFAFA"
                android:textColor="#FAFAFA"
                android:hint="@string/regPassword"
                android:maxLength="20"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:id="@+id/logIn"
            android:text="Log In"/>

        <View
            android:layout_marginTop="15dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <ProgressBar
            android:id="@+id/profilepage_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView

            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAFAFA"
            android:text="@string/letsSighUp"/>


        <Button
            android:layout_marginTop="8dp"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLightBlue"
            android:textColor="#FFFFFF"
            android:padding="16dp"
            android:id="@+id/signUp"
            android:text="Sign Up"/>

        <TextView

            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FAFAFA"
            android:text="@string/forgetPassword"/>


        <Button
            android:layout_marginTop="8dp"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGreen"
            android:padding="16dp"
            android:id="@+id/forgotPwd"
            android:text="Reset Password"/>

    </LinearLayout>
</ScrollView>