<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".editProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginVertical="10dp"
            android:textSize="30sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_editPhone"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regPhone"
                android:maxLength="20"
                android:inputType="textPhonetic" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Certification agencies"/>

        <Spinner
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/editAgencyDropDown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_editDiverCertLevel"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regDiverCertLevel"
                android:maxLength="50"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_editDiverCertNo"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regDiverCertNo"
                android:maxLength="50"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="15dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit Profile"/>

        <ProgressBar
            android:id="@+id/editprofile_loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>


    </LinearLayout>

</ScrollView>